# NSSSIP2023

./: .gitmodules  README.md  documentation_todo.md  requirements.txt
.obsidian/: workspace.json
NSSSIP23_parts/drone_parts/: hires_mount2.STL
NSSSIP23_parts/pickup_mechanism/: arm2.STL  bearing_block.STL  bearing_mount.STL
NSSSIP23_parts/sensor_case/: sensor_case_bottom.STL  sensor_case_top.STL  sensor_top_disk.STL
autonomy_ws/devel/: .catkin  .rosinstall  setup.sh
autonomy_ws/devel/include/computer_pkg/: BoundingBox.h  PlaceSensorRequest.h
autonomy_ws/devel/include/drone_pkg/: DroneOpResponse.h  PlaceSensor.h
autonomy_ws/devel/lib/computer_pkg/: circular_flight  go_to_point_gui.py  go_to_point_node  sim_launch.sh  tflite_filter
autonomy_ws/devel/lib/drone_pkg/: drone_offboard  servo_control.py
autonomy_ws/devel/lib/pkgconfig/: computer_pkg.pc  drone_pkg.pc  yolov5_ros.pc
autonomy_ws/devel/lib/yolov5_ros/: detect.py
autonomy_ws/devel/share/computer_pkg/cmake/: computer_pkg-msg-extras.cmake  computer_pkg-msg-paths.cmake  computer_pkgConfig.cmake
autonomy_ws/devel/share/drone_pkg/cmake/: drone_pkg-msg-extras.cmake  drone_pkgConfig.cmake
autonomy_ws/devel/share/roseus/ros/computer_pkg/: manifest.l
autonomy_ws/devel/share/roseus/ros/drone_pkg/: manifest.l
autonomy_ws/devel/share/yolov5_ros/cmake/: yolov5_rosConfig.cmake
autonomy_ws/launch/: computer.launch  drone.launch  go_to_point.launch  mavros.launch
autonomy_ws/src/computer_pkg/: CMakeLists.txt  package.xml
autonomy_ws/src/computer_pkg/scripts/: repeater.sh  tag_to_topic.py
autonomy_ws/src/computer_pkg/src/: camera_convert_node.cpp  go_to_point_node.cpp  tflite_filter.cpp
autonomy_ws/src/drone_pkg/: CMakeLists.txt
autonomy_ws/src/drone_pkg/src/: PID_controller.cpp  drone_offboard.cpp  servo_control.py
autonomy_ws/src/drone_pkg/srv/: PlaceSensor.srv
devel/: .catkin  _setup_util.py  setup.sh
devel/include/computer_msgs/: AiDetection.h
devel/include/computer_pkg/: AiDetection.h  BoundingBoxes.h  PlaceSensor.h  PlaceSensorResponse.h
devel/include/drone_pkg/: DroneOp.h  DroneOpRequest.h  PlaceSensorRequest.h  PlaceSensorResponse.h
devel/lib/computer_pkg/: camera_convert_node  circular_flight  go_to_point_node  placement.py  sim_launch.sh  tflite_filter
devel/lib/drone_pkg/: PID_controller  drone_offboard
devel/lib/perception_pkg/: placement.py
devel/lib/pkgconfig/: computer_msgs.pc  computer_pkg.pc  detection_msgs.pc  drone_pkg.pc  perception_pkg.pc  yolov5_ros.pc
devel/lib/python3/dist-packages/computer_msgs/msg/: _AiDetection.py
devel/lib/python3/dist-packages/computer_pkg/msg/: _AiDetection.py  _BoundingBoxes.py  __init__.py
devel/lib/python3/dist-packages/computer_pkg/srv/: _PlaceSensor.py  __init__.py
devel/lib/python3/dist-packages/drone_pkg/srv/: _DroneOp.py  _PlaceSensor.py  __init__.py
devel/share/common-lisp/ros/computer_msgs/msg/: AiDetection.lisp  _package.lisp  _package_AiDetection.lisp  computer_msgs-msg.asd
devel/share/common-lisp/ros/computer_pkg/msg/: AiDetection.lisp  _package.lisp  _package_AiDetection.lisp  _package_BoundingBoxes.lisp  computer_pkg-msg.asd
devel/share/common-lisp/ros/computer_pkg/srv/: PlaceSensor.lisp  _package_PlaceSensor.lisp  computer_pkg-srv.asd
devel/share/common-lisp/ros/drone_pkg/srv/: DroneOp.lisp  PlaceSensor.lisp  _package.lisp  _package_DroneOp.lisp  _package_PlaceSensor.lisp  drone_pkg-srv.asd
devel/share/computer_msgs/cmake/: computer_msgs-msg-extras.cmake  computer_msgs-msg-paths.cmake  computer_msgsConfig.cmake
devel/share/computer_pkg/cmake/: computer_pkg-msg-extras.cmake  computer_pkg-msg-paths.cmake  computer_pkgConfig.cmake
devel/share/detection_msgs/cmake/: detection_msgs-msg-extras.cmake  detection_msgs-msg-paths.cmake  detection_msgsConfig.cmake
devel/share/drone_pkg/cmake/: drone_pkg-msg-extras.cmake  drone_pkg-msg-paths.cmake  drone_pkgConfig.cmake
devel/share/gennodejs/ros/computer_msgs/msg/: AiDetection.js  _index.js
devel/share/gennodejs/ros/computer_pkg/msg/: AiDetection.js  BoundingBox.js  _index.js
devel/share/gennodejs/ros/computer_pkg/srv/: PlaceSensor.js  _index.js
devel/share/perception_pkg/cmake/: perception_pkg-msg-extras.cmake  perception_pkg-msg-paths.cmake  perception_pkgConfig.cmake
devel/share/roseus/ros/computer_msgs/: manifest.l
devel/share/roseus/ros/computer_pkg/: manifest.l
devel/share/roseus/ros/detection_msgs/: manifest.l
devel/share/roseus/ros/drone_pkg/: manifest.l
devel/share/yolov5_ros/cmake/: yolov5_rosConfig.cmake
docs/: irlock_docs.md  quickstart_guide.md  system_architecture.md  vision_docs.md
launch/: circle.launch  computer.launch  drone.launch  go_to_point.launch  launch_docs.md  mavros.launch  perception.launch  sim_test.launch
parts/: README.md
parts/drone_parts/: drone_parts.3mf  hires_mount1.STL  lidar_mount.STL  skid_leg.STL
parts/pickup_mechanism/: arm1.STL  pickup_mechanism.3mf  servo_mount.STL
parts/sensor_case/: sensor_case.3mf
scripts/: router_start.sh
src/: Note.md  README  perception_pkg  yolo
src/computer_msgs/: CMakeLists.txt  package.xml
src/computer_pkg/: CMakeLists.txt
src/computer_pkg/scripts/: sim_launch.sh
src/computer_pkg/src/: camera_convert_node.cpp  circular_flight.cpp  go_to_point_node.cpp  placement.py  tflite_filter.cpp
src/computer_pkg/training_data/: sensor_detect.yaml
src/drone_pkg/: CMakeLists.txt  package.xml
src/drone_pkg/launch/: drone.launch
src/drone_pkg/src/: PID_controller.cpp  drone_offboard.cpp  servo_control.py
src/perception_pkg/: CMakeLists.txt  README.md  main.py  package.xml  perception.txt
src/perception_pkg/launch/: perception.launch
src/perception_pkg/scripts/: lat_long_gui.py
src/perception_pkg/src/: capture_GE_imagery.py  placement.py
src/perception_pkg/src/perception_yolo/: data_split.py  readme.md  readme.txt
src/perception_pkg/src/perception_yolo/runs/train/exp9/: opt.yaml  results.csv
src/yolov5_ros/: .gitmodules
src/yolov5_ros/src/: detect.py
teensy_servo_control/: README.md  teensy_servo_control.ino
(+18 files in other folders)
