<?xml version="1.0"?>
<package format="2">
  <name>computer_msgs</name>
  <version>0.0.0</version>
  <description>The computer_msgs package</description>

  <maintainer email="arl@todo.todo">arl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
